@@ -53,7 +53,7 @@ Upgrade from 1.2.X to 1.3
 -------------------------
 cat cdrtable.sql.1.2.1-1.3 | mysql voipmonitor
 
-Upgrade from 1.3.X to 1.5
+Upgrade from 1.3.X and 1.4.X to 1.5
 -------------------------
 cat cdrtable.sql.1.3-1.5 | mysql voipmonitor
 
