@@ -8,6 +8,8 @@ CREATE TABLE `cdr` (
   `caller` varchar(255) NOT NULL,
   `callername` varchar(255) NOT NULL,
   `called` varchar(255) NOT NULL,
+  `sipcallerip` int(32) unsigned NOT NULL,
+  `sipcalledip` int(32) unsigned NOT NULL,
   `fbasename` varchar(255) NOT NULL,
   `bye` tinyint(2) NOT NULL default 2,
   `sighup` tinyint(2) NOT NULL default 0,
@@ -84,6 +86,8 @@ CREATE TABLE `cdr` (
   KEY `duration` (`duration`),
   KEY `source` (`caller`),
   KEY `destination` (`called`),
+  KEY `sipcallerip` (`sipcallerip`),
+  KEY `sipcalledip` (`sipcalledip`),
   KEY `a_saddr` (`a_saddr`),
   KEY `b_saddr` (`b_saddr`),
   KEY `a_lost` (`a_lost`),
